# VARIABILITY

./: pyproject.toml
configs/: default.yaml
data/processed/: selectivity_filter.csv
notebooks/archive/: tr_fano.ipynb
notebooks/exploration/: exploration 17-10.ipynb  exploration 24-10.ipynb
notebooks/fano/: main.ipynb  preprocessing.ipynb
notebooks/response-level/: response-level v2.ipynb  response-level v3.ipynb  response-level.ipynb  response-level_v4.ipynb
notebooks/variability-hierarchy/: v1.ipynb
scripts/: run_pipeline.py
src/fano_project/: config.py
src/fano_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fano_project/analysis/: analysis_logic.py  caching.py  plotting.py
src/fano_project/preprocessing/: caching.py  loading.py  preprocessing_logic.py  wilcoxon.py
src/pareto/: analysis.py  data_io.py  plotting.py  preprocessing.py  stats.py
src/pareto_project.egg-info/: PKG-INFO  SOURCES.txt
