[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pareto-project"        which python; which pip 
version = "0.1.0"
requires-python = ">=3.10"
# optional:
# dependencies = ["numpy>=1.24", "pandas>=2.0", "matplotlib>=3.8", "allensdk>=2.16"]

[tool.setuptools]
package-dir = {"" = "src"}    

[tool.setuptools.packages.find]
where = ["src"]                 
